cmake_minimum_required(VERSION 3.15)
project(sniff)
set(CMAKE_C_STANDARD 99)
SET(CMAKE_MODULE_PATH /home/npiatiko/CLionProjects/sniffer)
find_package(PCAP REQUIRED)
include_directories(./includes)
add_executable(sniff ./src/file_worker.c src/filter_exp.c src/ip_list.c src/main.c src/signal_handler.c)
add_executable(cli src/cli.c)
target_link_libraries(sniff ${PCAP_LIBRARY})